// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Group component Field group component props Can mark inner input as disabled 1`] = `
<div
  className="caldera-config-field"
>
  <label
    htmlFor="control-224"
  >
    Who
  </label>
  <input
    aria-describedby={null}
    className="required block-input field-config field-config"
    disabled={true}
    id="control-224"
    onBlur={undefined}
    onChange={[Function]}
    onFocus={undefined}
    required={true}
    type="text"
    value={undefined}
  />
  
</div>
`;

exports[`Field Group component Field group component props Can mark inner input as required 1`] = `
<div
  className="caldera-config-field"
>
  <label
    htmlFor="control-223"
  >
    Who
  </label>
  <input
    aria-describedby={null}
    className="required block-input field-config field-config"
    disabled={undefined}
    id="control-223"
    onBlur={undefined}
    onChange={[Function]}
    onFocus={undefined}
    required={true}
    type="text"
    value={undefined}
  />
  
</div>
`;

exports[`Field Group component Field group component props Can show an input  1`] = `
<div
  className="caldera-config-field"
>
  <label
    htmlFor="control-22"
  >
    Who
  </label>
  <input
    aria-describedby={null}
    className="block-input field-config field-config"
    disabled={undefined}
    id="control-22"
    onBlur={undefined}
    onChange={[Function]}
    onFocus={undefined}
    required={false}
    type="text"
    value={undefined}
  />
  
</div>
`;

exports[`Field Group component Field group component props Help text is optional 1`] = `
<div
  className="caldera-config-field"
>
  <label
    htmlFor="control-21"
  >
    Who
  </label>
  <input
    aria-describedby={null}
    className="block-input field-config field-config"
    disabled={undefined}
    id="control-21"
    onBlur={undefined}
    onChange={[Function]}
    onFocus={undefined}
    required={false}
    type="text"
    value={undefined}
  />
  
</div>
`;

exports[`Field Group component Field group component props Works with help text 1`] = `
<div
  className="caldera-config-field"
>
  <label
    htmlFor="control-20"
  >
    Who
  </label>
  <input
    aria-describedby="control-20-description"
    className="block-input field-config field-config"
    disabled={undefined}
    id="control-20"
    onBlur={undefined}
    onChange={[Function]}
    onFocus={undefined}
    required={false}
    type="text"
    value={undefined}
  />
  <p
    className="description"
    id="control-20-description"
  >
    Who to say hi to
  </p>
</div>
`;

exports[`Field Group component Uses the File field group, if type is file 1`] = `
<div
  className="caldera-file-fielde-group caldera-config-field"
>
  
  <label
    htmlFor="file-field-group"
  >
    file
  </label>
  <div
    account={undefined}
    aria-disabled={false}
    className=""
    entryId={undefined}
    onClick={[Function]}
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDragStart={[Function]}
    onDrop={[Function]}
    style={
      Object {
        "borderColor": "rgb(102, 102, 102)",
        "borderRadius": "5px",
        "borderStyle": "dashed",
        "borderWidth": "2px",
        "height": "200px",
        "margin": "0 auto",
        "position": "relative",
        "width": "200px",
      }
    }
  >
    <p>
      Try dropping some files here, or click to select files to upload.
    </p>
    <input
      accept=""
      autoComplete="off"
      disabled={false}
      multiple={true}
      onChange={[Function]}
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "opacity": 0.00001,
          "pointerEvents": "none",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      type="file"
    />
  </div>
</div>
`;

exports[`Field Group component Uses the Magic group, if type is magic 1`] = `
<div
  className="caldera-magic-select-group caldera-config-field"
>
  <label
    htmlFor="magic-field-group"
  >
    magic
  </label>
  
  <div
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    <input
      aria-autocomplete="list"
      aria-expanded={false}
      autoComplete="off"
      className="caldera-magic-input caldera-magic-input-magic-field-group"
      id="magic-field-group"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="combobox"
      value=""
    />
  </div>
</div>
`;
